MINOR: Share group tidying (#21711)
Minor tidying up of share group code, mainly fixing compiler warnings.
Also fixed three flaky tests, all of which were failing occasionally
because of impatience.

Reviewers: Manikumar Reddy <manikumar.reddy@gmail.com>